# duckboat

./: .gitignore  .nojekyll  Untitled-1.ipynb  about.html  arrow_pycapsule.html  changelog.html  changelog.md  concepts.html  dev_notes.md  duckdb_arrow_change.html  duckdb_stuff.html  fsq.html  guide.html  index.html  justfile  lazy.html  lazy_example.html  makefile  proposal_do_chain.html  pyproject.toml  ramble.html  readme.html  readme.md  related.html  robots.txt  search.json  sitemap.xml  test.html  test.ipynb  todo.html  todo.md  trips_analysis.html  trips_analysis.ipynb  tstrings.html  tut_fsq.html  tut_lazy.html  tut_nyc_join.html  wizard.html  wizard.ipynb
.github/workflows/: coverage.yml  hynek_action.yml  pypi_publish.yml  tests.yml  wheels2.yml
design/: arrow_pycapsule.md  duckdb_arrow_change.md  error_messages.md  llm_evals.md  proposal_do_chain.md
docs/: _quarto.yml  about.qmd  changelog.qmd  concepts.qmd  duckdb_stuff.qmd  fsq.ipynb  index.qmd  lazy.qmd  lazy_example.ipynb  proposal_do_chain.md  ramble.qmd  related.qmd  todo.qmd  trips_analysis.ipynb  trips_analysis.qmd  tstrings.qmd  tut_fsq.ipynb  tut_lazy.ipynb  tut_nyc_join.qmd
notebooks/: Untitled-1.ipynb  demo.ipynb  demo.py  lazy_exaxmple.ipynb  penguin.ipynb  test.ipynb  test_repr.ipynb  trips_analysis.ipynb
src/darkwing/: __init__.py  _con.py  _get_if_file.py  _objects.py  _query.py  database.py  database_mixin.py  do_mixin.py  doer.py  mixin_database.py  mixin_do.py  mixin_table.py  query.py  sfo.py  table.py  table_mixin.py
src/darkwing/ddb/: __init__.py  _query.py
src/darkwing/duckdb_part/: __init__.py  _query.py  relation.py
src/duckboat/: __init__.py  _tstrings.py  mixin_do.py  mixin_table.py  table.py
src/duckboat/ddb/: _con.py  _query.py  _relation.py
src/duckboat/examples/: __init__.py  _penguins.py
tests/: conftest.py  foo.sql  test_basic.py  test_db.py  test_examples.py  test_formats.py  test_helpers.py  test_repr.py  test_tstrings.py
