[project]
name = 'darkwing'
version = '0.6.0'
description = 'An experimental data-wrangling library built on DuckDB for pipelining SQL snippets.'
authors = [
    { name = 'AJ Friend', email = 'ajfriend@gmail.com' }
]
license = 'MIT'
keywords = ['data-wrangling', 'duckdb', 'SQL', 'ETL', 'pipelines']
readme = 'readme.md'
requires-python = '>=3.9'

dependencies = [
    'duckdb',
    'pyarrow',
    'pandas',
]

[project.optional-dependencies]
test = ['pytest', 'pytest-cov']
dev = ['jupyterlab', 'ipykernel', 'jupyterlab_execute_time']
docs = ['matplotlib']
all = [
    'darkwing[test]',
    'darkwing[dev]',
    'darkwing[docs]',
    'polars',
]

[project.urls]
homepage = 'https://github.com/ajfriend/darkwing'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
